force-app/main/default/objects/QuoteLineItem/QuoteLineItem.object-meta.xml
<CustomObject>
    <description>Native RCA Quote line. Carries ProductSellingModelId to define the selling motion (One-Time, Termed, Evergreen). Replaces SBQQ__QuoteLine__c.</description>
    <label>Quote Line Item</label>
    <pluralLabel>Quote Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>