force-app/main/default/objects/QuoteLineItem/fields/RCA_EndDate__c.field-meta.xml
<CustomField>
    <fullName>RCA_EndDate__c</fullName>
    <label>End Date</label>
    <description>Subscription or service end date for this line. Auto-populated from ProductSellingModel.PricingTerm on line creation.</description>
    <type>Date</type>
</CustomField>