force-app/main/default/objects/QuoteLineItem/fields/RCA_NetPrice__c.field-meta.xml
<CustomField>
    <fullName>RCA_NetPrice__c</fullName>
    <label>Net Price</label>
    <description>Calculated net price after discount. Formula: UnitPrice * Quantity * (1 - Discount/100).</description>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>