force-app/main/default/objects/QuoteLineItem/fields/RCA_StartDate__c.field-meta.xml
<CustomField>
    <fullName>RCA_StartDate__c</fullName>
    <label>Start Date</label>
    <description>Subscription or service start date for this line. Drives proration calculations when amending mid-term.</description>
    <type>Date</type>
</CustomField>