force-app/main/default/objects/QuoteLineItem/validationRules/RCA_DiscountCannotExceed100.validationRule-meta.xml
<ValidationRule>
    <fullName>RCA_DiscountCannotExceed100</fullName>
    <active>true</active>
    <description>Prevents a discount greater than 100% being entered on any quote line.</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Discount)),
    OR(Discount &gt; 100, Discount &lt; 0)
)</errorConditionFormula>
    <errorMessage>Discount must be between 0% and 100%.</errorMessage>
    <errorDisplayField>Discount</errorDisplayField>
</ValidationRule>